--- a/index.css
+++ b/index.css
@@ -1,11 +1,15 @@
 body {
+  width: 100vw;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 canvas {
-  width: 800px;
-  height: 800px;
+  width: 600px;
+  height: 600px;
   border: 5px solid black;
 }
